--- a/wearable/src/main/res/values/colors.xml
+++ b/wearable/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="background">#03A9F4</color>
     <color name="digital_text">#ffffff</color>
+    <color name="temperature_high_text">#ffcdd2</color>
+    <color name="temperature_low_text">#81d4fa</color>
 </resources>
